# sync-smartwatch-xiaomi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.server.yml  pyproject.toml  requirements.txt
docs/: data-model.md
examples/: health-import.sample.json
scripts/: health_export_reminder.py  import_apple_health.py  install_health_export_cron.sh  refresh_health_coverage.py  run_whatsapp_health_pipeline.sh  sync_apple_health_export.py  telegram_fetch_export.py  whatsapp_download_export.py
src/health_agent_bridge/: __init__.py  apple_health_importer.py  config.py  database.py  export_archive.py  health_coverage.py  import_state.py  main.py  repository.py  schemas.py  summary_service.py  whatsapp_sync_state.py  workspace.py
