[project]
name = "health-agent-bridge"
version = "0.1.0"
description = "Local health data bridge for smartwatch agent workspaces."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic-settings==2.7.1",
    "tzdata==2026.1",
    "psycopg[binary]==3.2.3",
]

[tool.setuptools.packages.find]
where = ["src"]
